# vibe-machine

./: .gitignore  .prettierignore  .release-please-manifest.json  AGENTS.md  App.tsx  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DESIGN_SYSTEM.md  GEMINI.md  README.md  TODO.md  eslint.config.js  index.css  index.html  index.tsx  lefthook.yml  metadata.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  types.ts  utils.test.ts  utils.ts  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-size.yml  release-please.yml  release.yml
components/: AudioTimeline.ts  Icons.tsx  PlayerControls.tsx  README.md  Sidebar.tsx  VideoRenderer.ts  Visualizer.tsx  VisualizerCore.ts
crates/vibe-engine/: Cargo.toml  README.md
crates/vibe-engine/src/: lib.rs
docs/: STATE_FLOWS.md
docs/adr/: 0000-template.md  0001-shared-rust-renderer.md  001-tauri-over-electron.md  002-shared-rust-vibe-engine.md  003-symphonia-audio-decode.md  004-ffmpeg-sidecar-export.md  005-path-guard-security.md  006-zustand-store-architecture.md  007-platform-abstraction-pattern.md  008-export-controller-deep-module.md  009-audio-system-singleton.md  README.md
engine/: AudioSystem.test.ts  AudioSystem.ts  README.md  RenderSystem.ts
export/: ExportController.ts  README.md  renderTextOverlay.ts
hooks/: README.md  useAudioEngine.ts  useObjectUrl.ts  useVibeEngine.ts
platform/: README.md  tauriEnv.ts
scripts/: auto-update-app.sh  install-latest.sh  setup-ffmpeg.sh  update-homebrew-cask.sh  upload-release.mjs
site/: index.html
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: export_frame.rs  export_video.rs  lib.rs  path_guard.rs
store/: README.md  vibeStore.ts
tests/: AudioSystem.test.ts  smoke.test.ts  utils.test.ts  vibeStore.test.ts
utils/: overlayText.ts
