[package]
name = "vibe-machine"
version = "0.1.0"
description = "Vibe Machine"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
vibe-engine = { path = "../crates/vibe-engine" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-log = "2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
spectrum-analyzer = "1.5"
symphonia = { version = "0.5", features = ["all"] }
image = "0.25" # For debug saving if needed, or pixel conversions
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12.28", features = ["blocking", "rustls-tls"] }
zip = "7.2.0"
base64 = "0.22"
tempfile = "3"

[dev-dependencies]
